# supplite

./: .gitignore  LICENSE  README.md  context-hackathon.txt  context-project.txt  package.json  parse_stores.py  prd.txt  replace_stores.py  update_infrastructure.py
backend/: .env.example  README.md  pyproject.toml
backend/scripts/: _check_demos.py  export_real_estate_training_data.py  generate_synthetic_data.py  train_real_estate_model.py  verify_data.py  verify_output.txt
backend/src/supply_chain_brief/: __init__.py  config.py  housing_signals.py  main.py  service.py
data/: columns.md  demand_intelligence.db  frontend_data.json  gaz2025_index.html  generated_sku_exports.js  metro_dc_stores.csv  metro_profiles.csv  parsed_stores.json  real_estate_training_data.csv  real_estate_training_data_full_sample.csv  real_estate_training_data_full_smoke.csv  sku_catalog.csv  sku_inventory.csv  sku_weekly_signals.csv  supply chain items.txt  wsi stores.txt  zcta_centroids.csv
data/new/: frontend_data.json  generated_sku_exports.js  metro_income.csv  predictions.json  (+2 more)
frontend/: package-lock.json  package.json
models/: anomaly_detector.pkl  demand_forecast_30d.pkl  demand_forecast_60d.pkl  demand_forecast_90d.pkl  feature_columns.pkl  label_encoders.pkl  training_report.json
ps/: WSI-AITHON_Particpant_Idea_submission_template.pptx
src/: assemble_data_js.py  build_frontend_data.py  feature_engineering.py  generate_synthetic_data.py  generate_synthetic_data_v2.py  model_training.py  risk_classifier.py  stress_test_ml.py  test_model_inference.py  verify_v2_data.py
(+28 files in other folders)
